Fix HTML structure and update content

--- a/Web UAS SIG.html
+++ b/Web UAS SIG.html
@@ -480,7 +480,7 @@
           <div class="image-card">
             <!-- Ganti src dengan path file PNG peta elevasi Anda -->
             <img 
-              src="peta-elevasi.png" 
+              src="petaelevasi.png" 
               alt="Peta Klasifikasi Elevasi Kota Samarinda" 
               class="map-image"
             />
@@ -604,4 +604,5 @@
     }
   </script>
 </body>
+
 </html>
