--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
     <!-- Footer -->
     <footer class="footer-section">
       <p class="footer-text" id="teks-footer">
-        Dibuat untuk keperluan akademik – Analisis SIG, 2024
+        2309116063 Alvin Ari Pradhana - Project UAS Sistem Informasi Geografis
       </p>
     </footer>
     
@@ -606,3 +606,4 @@
 </body>
 
 </html>
+
