--- a/index.html
+++ b/index.html
@@ -879,13 +879,37 @@
       <div class="conclusion-content">
         <h3>Kesimpulan</h3>
         <p id="conclusionText">
-          Berdasarkan analisis spasial karakteristik geomorfologi menggunakan data DEMNAS, wilayah studi memiliki potensi yang baik untuk pengembangan lahan pertanian. Sekitar 71.7% area memiliki elevasi yang sesuai (0-300 mdpl) dan 82.1% area memiliki kemiringan lereng yang mendukung aktivitas pertanian (0-15°). Hasil overlay kedua parameter menunjukkan bahwa zona dengan kesesuaian tinggi tersebar di bagian utara dan tengah wilayah studi.
+        Pemanfaatan data Digital Elevation Model Nasional (DEMNAS) dengan resolusi spasial 0,27 arc-second
+        terbukti efektif dalam memetakan variasi topografi Kota Samarinda secara detail, khususnya dalam
+        membedakan dataran aluvial dan wilayah perbukitan. Hasil analisis menunjukkan bahwa wilayah Kota
+        Samarinda didominasi oleh dataran rendah dengan elevasi −5 hingga 25 MDPL yang mencakup 60,8% dari
+        total luas wilayah atau sekitar 42.237,0 hektar.
+        </p>
+
+        <p>
+        Evaluasi kemiringan lereng menunjukkan bahwa lahan dengan kategori sangat sesuai untuk pertanian
+        (lereng 0–8%) memiliki luasan terbesar, yaitu 26.762,7 hektar. Secara spasial, zona dengan tingkat
+        kesesuaian tertinggi tersebut terkonsentrasi di Kecamatan Palaran dan Sambutan, yang memiliki kondisi
+        topografi relatif datar dan mendukung pengembangan pertanian tanaman pangan secara intensif.
         </p>
         
         <h3>Rekomendasi</h3>
         <p>
-          Disarankan untuk memprioritaskan pengembangan pertanian di zona dengan elevasi rendah dan kemiringan datar hingga landai. Untuk area dengan kemiringan lebih curam, perlu penerapan teknik konservasi tanah seperti terasering. Penelitian lanjutan dapat mengintegrasikan parameter tambahan seperti jenis tanah, curah hujan, dan ketersediaan air untuk analisis kesesuaian lahan yang lebih komprehensif.
+        Berdasarkan hasil analisis spasial, Kecamatan Palaran dan Sambutan direkomendasikan sebagai prioritas
+        utama dalam penetapan dan perlindungan Lahan Pertanian Pangan Berkelanjutan (LP2B) di Kota Samarinda.
+        Pengembangan pertanian pada wilayah berelevasi rendah dan berlereng datar hingga landai perlu
+        diiringi dengan penerapan pengelolaan tata air yang terintegrasi, seperti sistem drainase atau
+        polder, guna memitigasi risiko genangan dan banjir.
         </p>
+
+        <p>
+        Sementara itu, wilayah dengan kemiringan lereng lebih dari 40% yang tersebar di Kecamatan Samarinda
+        Utara direkomendasikan untuk dipertahankan sebagai kawasan lindung karena memiliki tingkat kerentanan
+        tinggi terhadap longsor dan degradasi lahan. Integrasi data DEMNAS dalam perencanaan tata ruang
+        terbukti memberikan dasar spasial yang kuat bagi pemerintah daerah dalam pengambilan kebijakan
+        perlindungan lahan pertanian berkelanjutan.
+        </p>
+
       </div>
     </div>
   </section>
@@ -943,7 +967,7 @@
       hero_subtitle: "Penelitian berbasis SIG untuk menganalisis potensi kesesuaian lahan pertanian melalui analisis elevasi dan kemiringan lereng",
       cta_button: "Lihat Peta",
       conclusion_text:
-        "Berdasarkan analisis spasial karakteristik geomorfologi menggunakan data DEMNAS, wilayah studi memiliki potensi yang baik untuk pengembangan lahan pertanian. Zona dengan kesesuaian tinggi terkonsentrasi pada wilayah dengan elevasi rendah dan kemiringan datar hingga landai.",
+      "Pemanfaatan data DEMNAS dengan resolusi spasial 0,27 arc-second terbukti efektif dalam memetakan variasi topografi Kota Samarinda secara detail. Wilayah ini didominasi oleh dataran rendah dengan elevasi −5 hingga 25 MDPL seluas 42.237,0 hektar. Evaluasi kemiringan lereng menunjukkan bahwa lahan dengan kategori sangat sesuai (0–8%) mencakup 26.762,7 hektar dan terkonsentrasi di Kecamatan Palaran dan Sambutan, sehingga berpotensi tinggi untuk pengembangan pertanian pangan berkelanjutan dengan pengelolaan tata air yang memadai.",
       author_name: "Nama Peneliti",
       institution: "Program Studi Geografi"
     };
