--- a/index.html
+++ b/index.html
@@ -856,39 +856,8 @@
     <!-- Footer -->
   <footer class="footer">
     <div class="footer-container">
-      <div class="footer-content">
-
-        <div class="footer-section">
-          <h4>Penulis</h4>
-          <p id="authorName">Nama Peneliti</p>
-          <p>Email: peneliti@example.com</p>
-          <p>ORCID: 0000-0000-0000-0000</p>
-        </div>
-
-        <div class="footer-section">
-          <h4>Institusi</h4>
-          <p id="institution">Program Studi Geografi</p>
-          <p>Fakultas Ilmu Sosial dan Politik</p>
-          <p>Universitas Indonesia</p>
-        </div>
-
-        <div class="footer-section">
-          <h4>Publikasi</h4>
-          <p>Tahun: 2024</p>
-          <p>Volume: 10, Issue: 2</p>
-          <p>DOI: 10.xxxxx/sig.2024.xxxx</p>
-        </div>
-
-        <div class="footer-section">
-          <h4>Lisensi</h4>
-          <p>📄 Creative Commons BY-SA 4.0</p>
-          <p>Artikel ini dapat digunakan dan dibagikan dengan atribusi yang sesuai.</p>
-        </div>
-
-      </div>
-
       <div class="footer-bottom">
-        <p>© 2024 Analisis Spasial Kesesuaian Lahan Pertanian. All rights reserved.</p>
+        <p>Project UAS SIG - Alvin Ari Pradhana (2309116063)</p>
       </div>
     </div>
   </footer>
@@ -1020,3 +989,4 @@
 
 </body>
 </html>
+
