Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -856,9 +856,7 @@
     <!-- Footer -->
   <footer class="footer">
     <div class="footer-container">
-      <div class="footer-bottom">
-        <p>Project UAS SIG - Alvin Ari Pradhana (2309116063)</p>
-      </div>
+        <h3>Project UAS SIG - Alvin Ari Pradhana (2309116063)</h3>
     </div>
   </footer>
 
@@ -989,4 +987,5 @@
 
 </body>
 </html>
+
 
